Fix overlap of title text with remove btn

--- a/styles/main.css
+++ b/styles/main.css
@@ -111,23 +111,26 @@ h1 {
 .title {
   font-size: 2em;
   margin: 0px auto;
+  padding-right: 1em;
 }
 
 .remove-btn {
   position: absolute;
   top: 3em;
-  right: 50px;
+  right: 2em;
   width: 1.5em;
   height: 1.5em;
   background-image: url('../images/delete.svg');
+  background-color: rgba(245,245,245, 0.8);
   background-size: contain;
   background-repeat: no-repeat;
+  border-radius: 50%;
   cursor: pointer;
 }
 
 .remove-btn:hover {
   transform: scale(1.5);
-  filter: invert(0.8) sepia(0.5) saturate(5) hue-rotate(300deg);
+  background-image: url('../images/delete-hover.svg');
 }
 
 .slider-body {
@@ -242,3 +245,10 @@ footer p a:hover {
   text-align: center;
 }
 
+
+/* ADJUSTMENTS FOR NARROWER SCREENS */
+@media (max-width: 800px) {
+  .title {
+    font-size: 1.5em;
+  }
+}
